Added header section and responsive it

--- a/index.html
+++ b/index.html
@@ -11,10 +11,37 @@
 <body>
 
     <!-- Header Area! -->
-    <header>
+    <header class="container">
+        <!-- Navigation Bar -->
+        <nav class="navbar flex">
+            <figure>
+                <img src="./assets/logo.png" alt="Logo Image">
+            </figure>
 
-        
+            <ul class="navbar flex">
+                <li><a href="#" class="active item">Home</a></li>
+                <li><a href="#" class="item">Shop</a></li>
+                <li><a href="#" class="item">About us</a></li>
 
+                <div class="nav_icon">
+                    <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <span>Cart ($56)</span>
+                </div>
+            </ul>
+        </nav>
+
+        <!-- Banner Area! -->
+        <div class="banner section_gap flex">
+            <!-- Banner Left -->
+            <div class="banner_text">
+                <h1>ALWAYS <span>FRESH<br> FLOWERS</span></h1>
+                <p>Experience the unparalleled beauty and captivating aroma of our premium fresh flowers. Our comprehensive selection encompasses classic varietals and unique exotic blooms, meticulously curated for every occasion.</p>
+            </div>
+            <!-- Banner Right -->
+            <div class="banner_img">
+                <img src="./assets/hero-flower.png" alt="Banner Image">
+            </div>
+        </div>
     </header>
 
 </body>
