Added plants section and responsive it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <!-- Header Area! -->
+    <!------------ Header Area! ------------>
     <header class="container">
         <!-- Navigation Bar -->
         <nav class="navbar flex">
@@ -43,6 +43,77 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <!------------ Plants Section ------------>
+        <section class="plants_section container section_gap">
+            <!-- Section_title -->
+            <div class="section_title">
+                <h2><span>Our</span> Plants</h2>
+                <p>Discover a beautiful array of fresh flowers at our shop. From classic roses to exotic blooms,<br> we offer an exquisite selection to delight your senses</p>
+            </div>
+
+            <!-- Plants Card -->
+            <div class="plants_cards">
+                <div class="card">
+                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <h5>Lily Blossom</h5>
+                    <h4>$20 USD</h4>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <h5>Lily Blossom</h5>
+                    <h4>$20 USD</h4>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <h5>Lily Blossom</h5>
+                    <h4>$20 USD</h4>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <h5>Lily Blossom</h5>
+                    <h4>$20 USD</h4>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <h5>Lily Blossom</h5>
+                    <h4>$20 USD</h4>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <h5>Lily Blossom</h5>
+                    <h4>$20 USD</h4>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <h5>Lily Blossom</h5>
+                    <h4>$20 USD</h4>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <h5>Lily Blossom</h5>
+                    <h4>$20 USD</h4>
+                    <button class="btn">ADD TO CART</button>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
 </body>
 </html>
