Added Plants Lover Section and responsive it

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Responsive Website - Shihab</title>
     <link rel="stylesheet" href="./styles/style.css">
     <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
     <!------------ Header Area! ------------>
@@ -35,7 +39,9 @@
             <!-- Banner Left -->
             <div class="banner_text">
                 <h1>ALWAYS <span>FRESH<br> FLOWERS</span></h1>
-                <p>Experience the unparalleled beauty and captivating aroma of our premium fresh flowers. Our comprehensive selection encompasses classic varietals and unique exotic blooms, meticulously curated for every occasion.</p>
+                <p>Experience the unparalleled beauty and captivating aroma of our premium fresh flowers. Our
+                    comprehensive selection encompasses classic varietals and unique exotic blooms, meticulously curated
+                    for every occasion.</p>
             </div>
             <!-- Banner Right -->
             <div class="banner_img">
@@ -50,7 +56,8 @@
             <!-- Section_title -->
             <div class="section_title">
                 <h2><span>Our</span> Plants</h2>
-                <p>Discover a beautiful array of fresh flowers at our shop. From classic roses to exotic blooms,<br> we offer an exquisite selection to delight your senses</p>
+                <p>Discover a beautiful array of fresh flowers at our shop. From classic roses to exotic blooms,<br> we
+                    offer an exquisite selection to delight your senses</p>
             </div>
 
             <!-- Plants Card -->
@@ -113,7 +120,28 @@
             </div>
         </section>
 
+        <!------------ Plants Lover Section ------------>
+        <section class="plants_lover_section container section_gap flex">
+            <!-- Left Part -->
+            <div class="plants_lover_img">
+                <img src="./assets/trusted-badge.png" alt="Trusted Badge image" class="badge">
+                <img src="./assets/flower-store.png" alt="flower-store-image">
+            </div>
+
+            <!-- Right Part -->
+            <div class="plants_lover_text">
+                <h2>Flower & Plants Lover</h2>
+                <ul>
+                    <li>Immerse your senses in the beauty of nature and the delightful fragrance of our flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers.</li>
+                    <li>Discover a vibrant selection of lush plants and stunning floral arrangements perfect for any occasion. Let us help you bring the joy of nature into your home or surprise someone special.
+                    </li>
+                    <li>Explore our exquisite collection of flowers and plants, carefully curated to inspire and delight. Whether you're a seasoned gardener or a budding enthusiast, you'll find something to love.</li>
+                </ul>
+            </div>
+        </section>
+
     </main>
 
 </body>
+
 </html>
