--- a/index.html
+++ b/index.html
@@ -132,11 +132,54 @@
             <div class="plants_lover_text">
                 <h2>Flower & Plants Lover</h2>
                 <ul>
-                    <li>Immerse your senses in the beauty of nature and the delightful fragrance of our flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers.</li>
-                    <li>Discover a vibrant selection of lush plants and stunning floral arrangements perfect for any occasion. Let us help you bring the joy of nature into your home or surprise someone special.
+                    <li>Immerse your senses in the beauty of nature and the delightful fragrance of our flower shop.
+                        From classic roses to exotic blooms, we offer a wide variety of fresh flowers.</li>
+                    <li>Discover a vibrant selection of lush plants and stunning floral arrangements perfect for any
+                        occasion. Let us help you bring the joy of nature into your home or surprise someone special.
                     </li>
-                    <li>Explore our exquisite collection of flowers and plants, carefully curated to inspire and delight. Whether you're a seasoned gardener or a budding enthusiast, you'll find something to love.</li>
+                    <li>Explore our exquisite collection of flowers and plants, carefully curated to inspire and
+                        delight. Whether you're a seasoned gardener or a budding enthusiast, you'll find something to
+                        love.</li>
                 </ul>
+            </div>
+        </section>
+
+        <!------------Latest Deal Section------------>
+        <!-- <section class="latest_deal_section container section_gap">
+            <div class="section_title">
+                <h2><span>Latest</span> Deals</h2>
+                <p>Discover a beautiful array of fresh flowers at our shop. From classic roses to exotic blooms,<br> we offer an exquisite selection to delight your senses</p>
+            </div>
+
+            <div class="latest_deal_grid">
+
+                <div class="latest_deal_left">
+                    <div class="latest_deal_main">
+                        <h5>60% Off | Bloom Plant</h5>
+                        <a href="#">Shop Now</a>
+                    </div>
+
+                    <div class="latest_deal_main">
+                        <h5>30% Off | Ana  Plant</h5>
+                        <a href="#">Shop Now</a>
+                    </div>
+                </div>
+
+                <div class="latest_deal_right">
+                    <h3>25% Off | Zabo Plant</h3>
+                    <a href="#">Shop Now</a>
+                </div>
+            </div>
+        </section> -->
+
+        <!------------Join Section------------>
+        <section class="join_section section_gap">
+            <div class="section_content container">
+                <h2>Join the colorful Bunch</h2>
+                <div class="join_form">
+                    <input type="email" placeholder="Write email">
+                    <button class="btnn">Subscribe</button>
+                </div>
             </div>
         </section>
 
