Added latest deal section and responsive it

--- a/index.html
+++ b/index.html
@@ -145,32 +145,26 @@
         </section>
 
         <!------------Latest Deal Section------------>
-        <!-- <section class="latest_deal_section container section_gap">
-            <div class="section_title">
-                <h2><span>Latest</span> Deals</h2>
-                <p>Discover a beautiful array of fresh flowers at our shop. From classic roses to exotic blooms,<br> we offer an exquisite selection to delight your senses</p>
-            </div>
+        <section class="latest_deal_section container section_gap">
 
-            <div class="latest_deal_grid">
-
-                <div class="latest_deal_left">
-                    <div class="latest_deal_main">
-                        <h5>60% Off | Bloom Plant</h5>
-                        <a href="#">Shop Now</a>
-                    </div>
-
-                    <div class="latest_deal_main">
-                        <h5>30% Off | Ana  Plant</h5>
-                        <a href="#">Shop Now</a>
-                    </div>
+            <div class="deal_left">
+                <div class="box box1">
+                    <h3>60% Off | Bloom Plant</h3>
+                    <a href="#">Shop Now</a>
                 </div>
 
-                <div class="latest_deal_right">
-                    <h3>25% Off | Zabo Plant</h3>
+                <div class="box box2">
+                    <h3>30% Off | Ana Plant</h3>
                     <a href="#">Shop Now</a>
                 </div>
             </div>
-        </section> -->
+
+            <div class="deal_right box box3">
+                <h2>25% Off | Zabo Plant</h2>
+                <a href="#">Shop Now</a>
+            </div>
+
+        </section>
 
         <!------------Join Section------------>
         <section class="join_section section_gap">
