Added Footer section and responsive it

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </div>
     </header>
 
+    <!------------Main Area!------------>
     <main>
         <!------------ Plants Section ------------>
         <section class="plants_section container section_gap">
@@ -176,8 +177,42 @@
                 </div>
             </div>
         </section>
-
     </main>
+
+    <!------------Footer Area!------------>
+    <footer class="container footer_section">
+
+        <div class="footer_text">
+            <img src="./assets/logo.png" alt="Logo">
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+        </div>
+
+        <ul class="footer_links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+
+        <ul class="footer_links">
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Help Center</a></li>
+        </ul>
+
+
+        <div class="footer_icons">
+            <img src="./assets/icon-linkedin.png" alt="">
+            <img src="./assets/icon-twitter.png" alt="">
+            <img src="./assets/icon-facebook.png" alt="">
+            <img src="./assets/icon-youtube.png" alt="">
+        </div>
+
+
+    </footer>
 
 </body>
 
