Card images change and final commit

--- a/index.html
+++ b/index.html
@@ -64,56 +64,56 @@
             <!-- Plants Card -->
             <div class="plants_cards">
                 <div class="card">
-                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <img src="./assets/flower6.jpg" alt="Card Iamge">
                     <h5>Lily Blossom</h5>
                     <h4>$20 USD</h4>
                     <button class="btn">ADD TO CART</button>
                 </div>
 
                 <div class="card">
-                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <img src="./assets/flower2.jpg" alt="Card Iamge">
                     <h5>Lily Blossom</h5>
                     <h4>$20 USD</h4>
                     <button class="btn">ADD TO CART</button>
                 </div>
 
                 <div class="card">
-                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <img src="./assets/flower3.jpg" alt="Card Iamge">
                     <h5>Lily Blossom</h5>
                     <h4>$20 USD</h4>
                     <button class="btn">ADD TO CART</button>
                 </div>
 
                 <div class="card">
-                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <img src="./assets/flower4.jpg" alt="Card Iamge">
                     <h5>Lily Blossom</h5>
                     <h4>$20 USD</h4>
                     <button class="btn">ADD TO CART</button>
                 </div>
 
                 <div class="card">
-                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <img src="./assets/flower5.jpg" alt="Card Iamge">
                     <h5>Lily Blossom</h5>
                     <h4>$20 USD</h4>
                     <button class="btn">ADD TO CART</button>
                 </div>
 
                 <div class="card">
-                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <img src="./assets/flower6.jpg" alt="Card Iamge">
                     <h5>Lily Blossom</h5>
                     <h4>$20 USD</h4>
                     <button class="btn">ADD TO CART</button>
                 </div>
 
                 <div class="card">
-                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <img src="./assets/flower7.jpg" alt="Card Iamge">
                     <h5>Lily Blossom</h5>
                     <h4>$20 USD</h4>
                     <button class="btn">ADD TO CART</button>
                 </div>
 
                 <div class="card">
-                    <img src="./assets/sample-flower-image.png" alt="Card Iamge">
+                    <img src="./assets/flower8.jpg" alt="Card Iamge">
                     <h5>Lily Blossom</h5>
                     <h4>$20 USD</h4>
                     <button class="btn">ADD TO CART</button>
